--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React PWA",
-  "name": "React PWA Example",
+  "short_name": "HEIA SMS",
+  "name": "HIGH END INTERNATIONAL ACADEMY",
   "icons": [
     {
       "src": "favicon.png",
